@@ -1,4 +1,4 @@
-# Copyright (c) 2009, 2021, Oracle and/or its affiliates.
+# Copyright (c) 2009, 2022, Oracle and/or its affiliates.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License, version 2.0, as
@@ -1412,6 +1412,9 @@ class MySQLConnectionTests(tests.MySQLConnectorTests):
 
         self.cnx.set_charset_collation(collation='greek_bin')
         self.assertEqual(70, self.cnx._charset_id)
+
+        self.cnx.set_charset_collation('utf8mb3')
+        self.assertEqual(310, self.cnx._charset_id)
 
         self.assertRaises(errors.ProgrammingError,
                           self.cnx.set_charset_collation, 666)
